fixed squished name on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+  -webkit-text-size-adjust: none;
+}
+
 body,
 p,
 a {
